--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "root/*": ["./*"]
     }
   },
+  "types": ["connect"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "./eslintrc.js"]
 }
